fix: adjust video container width for better responsiveness on smaller screens

--- a/scss/components-styles/App.scss
+++ b/scss/components-styles/App.scss
@@ -46,6 +46,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
+    
     min-height: 100vh;
     width: 100%;
     display: flex;
@@ -69,7 +71,7 @@ h1 {
     }
   
 }
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
       .video-container {
         width: 80%;
     }
